<resources>
    <string name="app_name">Anything</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="action_search">Search</string>
    <string name="image_feature">Image Feature</string>
    <string name="divide">÷</string>
    <string name="multiply">x</string>
    <string name="subtraction">-</string>
    <string name="addition">+</string>
    <string name="calculator">Calculator</string>
    <string name="clear">C</string>
    <string name="delete">DEL</string>
    <string name="equal">=</string>
    <string name="num_seven">7</string>
    <string name="num_four">4</string>
    <string name="num_one">1</string>
    <string name="num_zero">0</string>
    <string name="num_eight">8</string>
    <string name="num_five">5</string>
    <string name="num_two">2</string>
    <string name="num_double_zero">00</string>
    <string name="num_nine">9</string>
    <string name="num_six">6</string>
    <string name="num_three">3</string>
    <string name="point">.</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="title">Title</string>
    <string name="edit_text">Edit text</string>
    <string name="notes_list">Notes List</string>
    <string name="delete_note">Delete</string>

    <string-array name="home_feature_name">
        <item>Calculator</item>
        <item>Notes</item>
        <item>Stopwatch</item>
        <item>Reminder</item>
        <item>Money Manager</item>
        <item>Counter</item>
        <item>Unit Conversion</item>
        <item>Daily Schedule</item>
    </string-array>

    <array name="home_feature_icon">
        <item>@drawable/ic_calculator</item>
        <item>@drawable/ic_notes</item>
        <item>@drawable/ic_stopwatch</item>
        <item>@drawable/ic_reminder</item>
        <item>@drawable/ic_money_manager</item>
        <item>@drawable/ic_count</item>
        <item>@drawable/ic_currency</item>
        <item>@drawable/ic_daily_tasks</item>
    </array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
