<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraintLayoutFunction"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.calculator.CalculatorFragment">

    <LinearLayout
        android:id="@+id/buttonOperator"
        app:layout_constraintTop_toTopOf="@+id/constraintLayoutFunction"
        app:layout_constraintLeft_toLeftOf="@+id/constraintLayoutFunction"
        app:layout_constraintRight_toRightOf="@+id/constraintLayoutFunction"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4">

        <Button
            android:id="@+id/btnDivide"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/divide"
            style="@style/BtnStyleYellow"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btnMultiply"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/multiply"
            style="@style/BtnStyleYellow"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btnSubtraction"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subtraction"
            style="@style/BtnStyleYellow"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btnAddition"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addition"
            style="@style/BtnStyleYellow"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonBottom"
        app:layout_constraintTop_toBottomOf="@+id/buttonOperator"
        app:layout_constraintRight_toRightOf="@+id/constraintLayoutFunction"
        android:baselineAligned="true"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4">

        <LinearLayout
            android:id="@+id/buttonBottomRow1"
            app:layout_constraintTop_toTopOf="@+id/constraintLayoutFunction"
            app:layout_constraintLeft_toLeftOf="@+id/constraintLayoutFunction"
            app:layout_constraintRight_toRightOf="@+id/constraintLayoutFunction"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum="4">


        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttonBottomRow2"
            app:layout_constraintTop_toTopOf="@+id/constraintLayoutFunction"
            app:layout_constraintLeft_toLeftOf="@+id/constraintLayoutFunction"
            app:layout_constraintRight_toRightOf="@+id/constraintLayoutFunction"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum="4">


        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttonBottomRow3"
            app:layout_constraintTop_toTopOf="@+id/constraintLayoutFunction"
            app:layout_constraintLeft_toLeftOf="@+id/constraintLayoutFunction"
            app:layout_constraintRight_toRightOf="@+id/constraintLayoutFunction"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum="4">


        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttonBottomRow4"
            app:layout_constraintTop_toTopOf="@+id/constraintLayoutFunction"
            app:layout_constraintLeft_toLeftOf="@+id/constraintLayoutFunction"
            app:layout_constraintRight_toRightOf="@+id/constraintLayoutFunction"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum="4">

            <Button
                android:id="@+id/btnClear"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/clear"
                style="@style/BtnStyleRed"/>

            <Button
                android:id="@+id/btnDelete"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/delete"
                style="@style/BtnStyleRed"/>

            <Button
                android:id="@+id/btnEqual"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/equal"
                style="@style/BtnStyleBlue" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>