<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.lessthanthree.anything.ui.home.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home">

        <action android:id="@+id/action_home_to_calculator"
            app:destination="@+id/nav_calculator">
            <argument
                android:name="title"
                app:argType="string"/>
        </action>
        <action
            android:id="@+id/action_nav_home_to_nav_notes"
            app:destination="@id/nav_notes" />
        <action
            android:id="@+id/action_home_to_counter"
            app:destination="@id/nav_counter"/>
    </fragment>

    <fragment
        android:id="@+id/nav_calculator"
        android:name="com.lessthanthree.anything.ui.calculator.CalculatorFragment"
        android:label="{title}"
        tools:layout="@layout/fragment_calculator">

        <argument
            android:name="title"
            app:argType="string"/>

    </fragment>

    <fragment
        android:id="@+id/nav_counter"
        android:name="com.lessthanthree.anything.ui.counter.CounterFragment"
        android:label="{title}"
        tools:layout="@layout/fragment_counter">

        <argument
            android:name="title"
            app:argType="string"/>

    </fragment>

    <fragment
        android:id="@+id/nav_notes"
        android:name="com.lessthanthree.anything.ui.notes.NotesFragment"
        android:label="{title}"
        tools:layout="@layout/fragment_notes">

        <argument
            android:name="title"
            app:argType="string"/>
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.lessthanthree.anything.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.lessthanthree.anything.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
</navigation>