<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.calculator.CalculatorFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite">

        <View
            android:id="@+id/coverView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@android:color/transparent"
            android:focusable="true"
            android:visibility="gone"/>

        <LinearLayout
            android:id="@+id/mainLayout"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:orientation="vertical"
            android:layout_marginStart="64dp"
            android:layout_marginEnd="64dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/NoteStyleWhite">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RelativeLayout
                    android:id="@+id/notesMenu"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal"
                    style="@style/NoteStyleWhite"
                    android:visibility="visible">
                    <Button
                        android:id="@+id/btnNew"
                        android:layout_width="40dp"
                        android:layout_height="match_parent"
                        android:layout_alignParentLeft="true"
                        android:background="@android:color/transparent"
                        android:text="@string/plus"
                        android:textSize="30sp"
                        android:layout_alignParentStart="true" />
                    <Button
                        android:id="@+id/btnMore"
                        android:layout_width="50dp"
                        android:layout_height="match_parent"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:background="@drawable/ic_more_option"/>
                    <Button
                        android:id="@+id/btnColor"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_marginEnd="64dp"
                        android:layout_marginRight="64dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/ic_analytics"/>
                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/notesMoreMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    style="@style/NoteStyleWhite"
                    android:visibility="gone">
                    <Button
                        android:id="@+id/btnNotesList"
                        android:layout_width="match_parent"
                        android:layout_height="32dp"
                        android:layout_marginTop="8dp"
                        android:layout_gravity="center"
                        android:background="@android:color/transparent"
                        android:fontFamily="@font/roboto_mono_regular"
                        android:text="@string/notes_list"
                        android:textSize="16sp"/>
                    <Button
                        android:id="@+id/btnDeleteNote"
                        android:layout_width="match_parent"
                        android:layout_height="32dp"
                        android:layout_marginBottom="8dp"
                        android:layout_gravity="center"
                        android:background="@android:color/transparent"
                        android:fontFamily="@font/roboto_mono_regular"
                        android:text="@string/delete_note"
                        android:textSize="16sp"/>
                </LinearLayout>

            </RelativeLayout>

            <EditText
                android:id="@+id/editNote"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="16dp"
                android:autofillHints="@string/edit_text"
                android:background="@android:color/transparent"
                android:fontFamily="@font/roboto_mono_light"
                android:gravity="top"
                android:hint="@string/edit_text"
                android:inputType="textMultiLine"
                android:textSize="16sp" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>